# cookiecutter-k8s-operator

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  Dockerfile  README.md  build-image.sh  deploy.yaml  kind.yaml  pyproject.toml
{{cookiecutter.project_name}}/deploy/base/: kustomization.yaml
{{cookiecutter.project_name}}/deploy/base/resources/: deployment.yaml  namespace.yaml  rbac.yaml  service-account.yaml
{{cookiecutter.project_name}}/deploy/overlays/local/: kustomization.yaml
{{cookiecutter.project_name}}/deploy/overlays/local/patches/: deployment.yaml
{{cookiecutter.project_name}}/examples/: {{cookiecutter.crd_singular}}.yaml
{{cookiecutter.project_name}}/src/{{cookiecutter.module_name}}/: __init__.py  crds.yaml  utils.py  {{cookiecutter.crd_singular}}.py
{{cookiecutter.project_name}}/tests/test_{{cookiecutter.module_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.module_name}}/: __init__.py  {{cookiecutter.crd_singular}}.py
