[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core>=1.0.0"]

[tool.mypy]
files                  = "src/**/*.py"
ignore_errors          = true
ignore_missing_imports = true
pretty                 = true
python_version         = "{{ cookiecutter.python_version }}"
show_column_numbers    = true
show_error_codes       = true
show_error_context     = true

[[tool.mypy.overrides]]
ignore_errors = false
module        = "{{ cookiecutter.module_name }}"

[tool.poetry]
authors     = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "{{ cookiecutter.project_desc }}"
name        = "{{ cookiecutter.project_name }}"
readme      = "README.md"
repository  = "https://github.com/HarrisonTotty/{{ cookiecutter.project_name }}"
version     = "0.1.0"
include     = ["src/{{ cookiecutter.module_name }}/*.yaml"]

[tool.poetry.dependencies]
kopf       = "^{{ cookiecutter.kopf_version }}"
kubernetes = "^{{ cookiecutter.kubernetes_version }}"
python     = "^{{ cookiecutter.python_version }}"
pyyaml     = "*"

[tool.poetry.dev-dependencies]
mypy            = "*"
pytest          = "*"
pytest-aio      = "*"
pytest-cov      = "*"
pytest-randomly = "*"

[tool.pytest.ini_options]
addopts          = "--cov={{ cookiecutter.module_name }}"
python_files     = "*.py"
python_functions = "test_*"
testpaths        = "tests"
